--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
     posted on this page with an updated "Last updated" date.
   </p>
 
+    <h2>Data deletion</h2>
+  <p>
+    If you want to delete your account and associated data, email us from your
+    registered email address at <a href="mailto:prepixo.official@gmail.com">
+    prepixo.official@gmail.com</a> with the subject "Delete my Prepixo account".
+    We will delete your data within 7 days and confirm by email.
+  </p>
+
+
   <h2>Contact</h2>
   <p>
     If you have any questions about this Privacy Policy, contact us at:
