Include AI services and data privacy details
Added information about AI services and data handling.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
     We will delete your data within 7 days and confirm by email.
   </p>
 
+  <h3>AI Services</h3>
+<p>
+  This app uses Google's <strong>Gemini API</strong> to provide AI-based doubt-solving and learning assistance features.
+  When you use the AI or doubt-solving sections of the app, your text input is securely sent to Google's servers for processing
+  and the generated response is returned to you. 
+  No personal or sensitive information is permanently stored or used for training purposes.
+</p>
+
+
 
   <h2>Contact</h2>
   <p>
